tests/Rules/Aria/Fixtures/invalid/aria_hidden_focus.html.twig
{# 1 errors #}
<button aria-hidden="true">Click</button>
